<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">diabetEasy</string>
    <string name="start_time_formatted" translatable="false">00:00</string>
    <string name="time1" translatable="false">MMMM d, y</string>
    <string name="time2" translatable="false">d MMMM y</string>
    <string name="time3" translatable="false">y-MM-d</string>
    <string name="time4" translatable="false">MM/d/y</string>
    <string name="time5" translatable="false">d/MM/y</string>
    <string name="zero" translatable="false">0</string>
    <string name="navigation_drawer_open" translatable="false">open</string>
    <string name="navigation_drawer_close" translatable="false">close</string>
    <string name="ad">Iklan</string>
    <string name="sponsored">Disponsori</string>
    <string name="title_tab_home">Home</string>
    <string name="title_tab_categories">Kategori</string>
    <string name="title_tab_favorites">Favorit</string>
    <string name="title_tab_authors">Authors</string>
    <string name="title_tab_pages">Halaman</string>
    <string name="title_tab_archive">Arsip</string>
    <string name="title_tab_posts">Posts</string>
    <string name="filter_custom_sorting">Custom Sorting</string>
    <string name="filter_comment_count_desc">Jumlah Komentar (turun)</string>
    <string name="filter_comment_count_asc">Jumlah Komentar (naik)</string>
    <string name="filter_like_desc">Jumlah Like (turun)</string>
    <string name="filter_like_asc">Jumlah Like (naik)</string>
    <string name="filter_category_name_desc">Nama Kategori (Z - A)</string>
    <string name="filter_category_name_asc">Nama Kategori (A - Z)</string>
    <string name="filter_category_content_count_desc">Post Count (turun)</string>
    <string name="filter_category_content_count_asc">Post Count (naik)</string>
    <string name="filter_author_name_desc">Nama Author (Z - A)</string>
    <string name="filter_author_name_asc">Nama Author (A - Z)</string>
    <string name="filter_author_username_desc">Nama pengguna Author (Z - A)</string>
    <string name="filter_author_username_asc">Nama pengguna Author (A - Z)</string>
    <string name="filter_author_post_count_desc">Jumlah Post (turun)</string>
    <string name="filter_author_post_count_asc">Jumlah Post (naik)</string>
    <string name="filter_tag_name_desc">Nama Tag (Z - A)</string>
    <string name="filter_tag_name_asc">Nama Tag (A - Z)</string>
    <string name="filter_tag_count_desc">Tag Count (turun)</string>
    <string name="filter_tag_count_asc">Tag Count (naik)</string>
    <string name="filter_title_desc">Judul (Z - A)</string>
    <string name="filter_title_asc">Judul (A - Z)</string>
    <string name="filter_date_desc">Tanggal (terbaru)</string>
    <string name="filter_date_asc">Tanggal (terlama)</string>
    <string name="navigation_register">Daftar</string>
    <string name="navigation_sign_in">Masuk</string>
    <string name="profile">Profil</string>
    <string name="general">Gambaran</string>
    <string name="app">Aplikasi</string>
    <string name="nav_notifications">Notifikasi</string>
    <string name="nav_update_profile">Ubah Profil</string>
    <string name="nav_logout">Keluar</string>
    <string name="nav_search">Pencarian Detail </string>
    <string name="nav_pages">Halaman</string>
    <string name="nav_authors">Authors</string>
    <string name="nav_archive">Arsip</string>
    <string name="nav_tag_cloud">Tag Cloud</string>
    <string name="nav_social_accounts">Social Accounts</string>
    <string name="nav_contact">Kontak</string>
    <string name="nav_share_the_app">Bagikan Aplikasi ini</string>
    <string name="nav_rate_this_app">Rate Aplikasi</string>
    <string name="nav_about_us">Tentang Kami</string>
    <string name="nav_faq">Pertanyaan yang sering muncul</string>
    <string name="nav_settings">Pengaturan</string>
    <string name="nav_categories">Kategori</string>
    <string name="nav_favorites">Favorit</string>
    <string name="search_not_found">Hasil Pencarian tidak ditemukan</string>
    <string name="post_not_found">No post found to be listed</string>
    <string name="category_not_found">No category found to be listed</string>
    <string name="author_not_found">No author found to be listed</string>
    <string name="social_not_found">No social account found to be listed</string>
    <string name="tag_not_found">No tag found to be listed</string>
    <string name="archive_not_found">No archive data found to be listed</string>
    <string name="faq_not_found">No question found to be listed</string>
    <string name="page_not_found">No page found to be listed</string>
    <string name="notification_not_found">No notification found to be listed</string>
    <string name="month_1">Januari</string>
    <string name="month_2">Februari</string>
    <string name="month_3">Maret</string>
    <string name="month_4">April</string>
    <string name="month_5">Mei</string>
    <string name="month_6">Juni</string>
    <string name="month_7">Juli</string>
    <string name="month_8">Agustus</string>
    <string name="month_9">September</string>
    <string name="month_10">Oktober</string>
    <string name="month_11">Nopember</string>
    <string name="month_12">Desember</string>
    <string name="Blue">Blue</string>
    <string name="Red">Red</string>
    <string name="Pink">Pink</string>
    <string name="Purple">Purple</string>
    <string name="DeepPurple">Deep Purple</string>
    <string name="Indigo">Indigo</string>
    <string name="LightBlue">Light Blue</string>
    <string name="Cyan">Cyan</string>
    <string name="Teal">Teal</string>
    <string name="Green">Green</string>
    <string name="LightGreen">Light Green</string>
    <string name="Lime">Lime</string>
    <string name="Yellow">Yellow</string>
    <string name="Amber">Amber</string>
    <string name="Orange">Orange</string>
    <string name="DeepOrange">Deep Orange</string>
    <string name="Brown">Brown</string>
    <string name="Black">Black</string>
    <string name="Grey">Grey</string>
    <string name="username_or_email_hint">Username or Email</string>
    <string name="password_hint">Password</string>
    <string name="username_or_email_required">Dibutuhkan Username atau Email </string>
    <string name="password_required">Dibutuhkan Password </string>
    <string name="sign_in">Login</string>
    <string name="forgot_password">Lupa password?</string>
    <string name="register_text"><![CDATA[No account? <b>Daftar</b>]]></string>
    <string name="invalid_credentials">The credentials you specified are not valid.</string>
    <string name="register">Daftar</string>
    <string name="name_hint">Nama</string>
    <string name="username_hint">Nama pengguna</string>
    <string name="email_hint">Email</string>
    <string name="name_required">Dibutuhkan Nama</string>
    <string name="username_required">Dibutuhkan Nama pengguna</string>
    <string name="email_required">Dibutuhkan Email</string>
    <string name="login_text"><![CDATA[Sudah punya akun? <b>Login</b>]]></string>
    <string name="register_failed"><![CDATA[Terjadi Error dalam pendaftaran.\nSilakan cona lagi.]]></string>
    <string name="username_or_email_already_exists">Nama pengguna atau email sudah digunakan.</string>
    <string name="register_success_text">With the confirmation link sent to your email address, you can define your password.</string>
    <string name="forgot_password_text">To reset your password, enter your username or email address.</string>
    <string name="send_reset_link">Send Password Reset URL</string>
    <string name="user_not_found">No such user found.</string>
    <string name="forgot_password_success_text">With the password link sent to your email address, you can define your password.</string>
    <string name="send_mail_again">Kirim Email lagi</string>
    <string name="password_notification_success">Your confirmation link has been sent to your email address again.</string>
    <string name="new_password">Password baru</string>
    <string name="new_password_required">password baru dibutuhkan</string>
    <string name="new_password_again">Password baru (lagi)</string>
    <string name="new_password_text"><![CDATA[<b>Hint:</b> The password should be at least 6 characters long. For stronger password, you can use capital letters, small letters, numbers and symbols (! ? $ % &) together.]]></string>
    <string name="reset_password">Reset Password</string>
    <string name="password_set_success">password baru telah berhasil disimpan.</string>
    <string name="comments">Komentar</string>
    <string name="write_comment">Tulis komentar</string>
    <string name="comment_hint">Komentar anda</string>
    <string name="comment_pending">(Awaiting moderation)</string>
    <string name="comment_success">Your comment has been saved successfully.</string>
    <string name="rate_success">Your vote has been saved successfully.</string>
    <string name="rate_failed">An error occurred while saving your vote.</string>
    <string name="already_rated">You already voted for this comment.</string>
    <string name="comment_failed">An error occurred while saving the comment.</string>
    <string name="comment_not_found">No comment yet</string>
    <string name="notification">Notifikasi</string>
    <string name="notification_desc">You can customize the setting for the notifications that will be sent to your device by this app.</string>
    <string name="notification_status">Status Notifikasi</string>
    <string name="notification_sound">Notifikasi Suara</string>
    <string name="vibration">Getar</string>
    <string name="app_language">Bahasa Aplikasi</string>
    <string name="app_theme">Tema Aplikasi</string>
    <string name="version">Versi</string>
    <string name="open_source_licence">Open Source Licenses</string>
    <string name="open_source_licence_desc">License details for open source software</string>
    <string name="informations">Informasi</string>
    <string name="information_desc">You can define the info that you want to be seen on your profile.</string>
    <string name="account">Akun</string>
    <string name="flush_settings">Reset Pengaturan</string>
    <string name="flush_settings_desc">Reset pengaturan aplikasi</string>
    <string name="flush_app_question">Are you sure that you want to reset settings?</string>
    <string name="flush_app_title">Pengaturan akan di reset</string>
    <string name="search">Cari</string>
    <string name="filter">Penyaringan</string>
    <string name="choose_filter">Pilih penyaringan</string>
    <string name="pass_min_char">Password should be at least 6 characters.</string>
    <string name="favorite_title"><![CDATA[You have no favorited\ncontent yet]]></string>
    <string name="favorite_description"><![CDATA[To add it to your favorites,\njust touch and hold on the post]]></string>
    <string name="favorite_sign_in">You can see your favorites whenever you wish after logging in.</string>
    <string name="search_on_posts">Cari di posts...</string>
    <string name="search_on_pages">Cari di pages...</string>
    <string name="search_authors">Cari di authors...</string>
    <string name="invalid_character_limit">It should be at least 3 characters.</string>
    <string name="current_password">Password saat ini</string>
    <string name="filter_ok">Penyaringan</string>
    <string name="edit_profile">Ubah Profil</string>
    <string name="website_hint">Website</string>
    <string name="unspecified">Not Specified</string>
    <string name="change_password">Ubah password</string>
    <string name="logout">Keluar</string>
    <string name="gender_hint">Jenis Kelamin</string>
    <string name="job_hint">Profesi</string>
    <string name="bio_hint">Biografi</string>
    <string name="about">Tentang</string>
    <string name="no_permission">Insufficient Authorization</string>
    <string name="no_permission_text">To view this section, please login.</string>
</resources>