<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/loginContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_login_required"
                android:layout_marginBottom="30dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_permission"
                android:layout_marginBottom="20dp"
                android:textColor="@color/hintColor"
                android:textSize="24sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_permission_text"
                android:textSize="16sp"
                android:textColor="@color/hintColor"
                android:lineSpacingExtra="4dp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profileContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            android:paddingTop="20dp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/informations"
                android:textColor="?attr/colorPrimary"
                android:textSize="14sp"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/information_desc"
                android:textColor="#757575"
                android:textSize="14sp"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"/>

            <LinearLayout
                android:id="@+id/emailContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.gulasehat.android.widget.CustomSwitch
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cs_icon="@drawable/icon_mail_bordered_gray"
                    app:cs_text="@string/email_hint"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#E4E4E4" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/websiteContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <com.gulasehat.android.widget.CustomSwitch
                    android:id="@+id/website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cs_icon="@drawable/icon_website_gray"
                    app:cs_text="@string/website_hint"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#E4E4E4" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/genderContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <com.gulasehat.android.widget.CustomSwitch
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cs_icon="@drawable/icon_gender_gray"
                    app:cs_text="@string/gender_hint"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#E4E4E4" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/jobContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <com.gulasehat.android.widget.CustomSwitch
                    android:id="@+id/job"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cs_icon="@drawable/icon_work_gray"
                    app:cs_text="@string/job_hint"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#E4E4E4" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bioContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <com.gulasehat.android.widget.CustomSwitch
                    android:id="@+id/bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cs_icon="@drawable/icon_bio_gray"
                    app:cs_text="@string/bio_hint"
                    />

            </LinearLayout>




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/account"
                android:textColor="?attr/colorPrimary"
                android:textSize="14sp"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"/>

            <com.gulasehat.android.widget.CustomPreference
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cp_icon="@drawable/icon_person_gray"
                app:cp_text="@string/edit_profile"
                app:cp_value="" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E4E4E4" />

            <com.gulasehat.android.widget.CustomPreference
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cp_icon="@drawable/icon_exit_red"
                app:cp_text="@string/logout"
                app:cp_value=""
                app:cp_color_tint="@color/red"
                />


        </LinearLayout>
    </LinearLayout>




</ScrollView>