<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="25dp"
    android:paddingEnd="25dp">

    <EditText
        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_password"
        android:maxLines="1"
        android:ellipsize="end"
        android:inputType="textPassword"
        android:theme="@style/EditTextTheme2"
        android:layout_marginBottom="5dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:maxLines="1"
        android:ellipsize="end"
        android:inputType="textPassword"
        android:theme="@style/EditTextTheme2"
        android:layout_marginBottom="5dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        />

    <EditText
        android:id="@+id/new_password_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password_again"
        android:maxLines="1"
        android:ellipsize="end"
        android:inputType="textPassword"
        android:theme="@style/EditTextTheme2"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        />

</LinearLayout>